# Bible_fine_tuning

./: .gitignore  README.md  _build_notebook.py  fine_tuning_bible.ipynb  pyproject.toml  test.md
_nb_parts/: section_00.py  section_01.py  section_02.py  section_03.py  section_04.py  section_04b.py  section_04c.py  section_04d.py  section_04e.py  section_05.py  section_06.py  section_07.py  section_08.py  section_09.py  section_10.py  section_11.py  section_12.py
bible_data/: 以弗所書.md  以斯帖記.md  以斯拉記.md  以西結書.md  以賽亞書.md  但以理書.md  何西阿書.md  使徒行傳.md  俄巴底亞書.md  傳道書.md  出埃及記.md  列王紀上.md  列王紀下.md  利未記.md  創世記.md  加拉太書.md  哈巴谷書.md  哈該書.md  哥林多前書.md  哥林多後書.md  啟示錄.md  士師記.md  尼西米記.md  希伯來書.md  帖撒羅尼迦前書.md  帖撒羅尼迦後書.md  彌迦書.md  彼得前書.md  彼得後書.md  提多書.md  提摩太前書.md  提摩太後書.md  撒母耳記上.md  撒母耳記下.md  撒迦利亞書.md  歌羅西書.md  歷代志上.md  歷代志下.md  民數記.md  猶大書.md  (+26 more)
configs/: training_config.yaml
src/: constants.py  response_policy.py  utils.py
src/data/: build_dataset.py  dataset_generator.py  parser.py  templates.py
src/evaluation/: evaluate.py  inference.py
src/training/: merge_model.py  train.py
tests/: conftest.py  test_build_dataset.py  test_dataset_generator.py  test_parser.py  test_response_policy.py  test_templates.py  test_utils.py
